--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
 }*/
 
 body{
-  background-color: grey;
+  background-color: MidnightBlue ;
 }
 
 .nav-paginas{
@@ -25,6 +25,15 @@ a{
 
 .contenidos{
   margin-top: 1rem;
+}
+
+.imagenblog{
+  width: 100%;
+  margin-top: 3rem;
+}
+
+.comment-icon{
+  align-content:
 }
 
 @media (min-width:768px){
